[gd_scene load_steps=2 format=3 uid="uid://ckknw030p00hq"]

[ext_resource type="Script" uid="uid://d1s803h5oto1b" path="res://scripts/main_ui.gd" id="1_fnul3"]

[node name="main_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fnul3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 50.0
theme_override_constants/separation = 10

[node name="fpsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AgentCountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="screamCalls" type="Label" parent="VBoxContainer"]
layout_mode = 2
